--- a/style.css
+++ b/style.css
@@ -8,393 +8,483 @@ body {
     background-color: #e3e6e6;
     overflow-X: hidden;
 }
-    .navbar {
-        height: 60px;
-        width: 100%;
-        background-color: #181c24;
-        color: #ffffff;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    /* box 1 */
-    .nav-logo {
-        height: 50px;
-        width: 100px;
-    }
-
-    .logo {
-        height: 100%;
-        width: 100%;
-        background-image: url("https://bulldogdm.com/bulldogdmorg/wp-content/uploads/2021/05/amazon.png");
-        background-size: cover;
-    }
-
-    .border {
-        border: 2px solid transparent;
-        cursor: pointer;
-    }
-
-    .border:hover {
-        border: 1.5px solid white;
-    }
-
-    /* box 2 */
-
-    .add-first {
-        margin-left: 15px;
-        font-size: .8rem;
-        color: #cccccc;
-    }
-
-    .add-sec {
-        margin-left: 5px;
-        font-size: 1rem;
-        color: #ffffff;
-    }
-
-    .nav-icon {
-        display: flex;
-        align-items: center;
-    }
-
-    /* box 3 */
-
-    .nav-search {
-        height: 40px;
-        width: 900px;
-        display: flex;
-        justify-content: space-around;
-
-    }
-
-    .search-select {
-        height: 40px;
-        width: 50px;
-        text-align: center;
-        font-size: 1rem;
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
-        border: none;
-        background-color: #e6e6e6;
-    }
-
-    .nav-search input {
-        width: 100%;
-        border: none;
-
-    }
-
-    .click {
-        height: 40px;
-        width: 45px;
-        background-color: #febd69;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.2rem;
-        color: #3b3835;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-    }
-
-    /* box 4 */
-    .country {
-        height: 55px;
-        width: 60px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 2px;
-    }
-
-    .flag {
-        height: 16px;
-        width: 21px;
-        background-image: url("https://upload.wikimedia.org/wikipedia/en/archive/a/a4/20151118161037%21Flag_of_the_United_States.svg");
-        background-size: contain;
-    }
-
-    .lang {
-        height: 15px;
-        width: 18px;
-        text-align: center;
-    }
-
-    .arrow {
-        height: 15px;
-        width: 18px;
-
-    }
-
-    /* box 5  */
-
-    .signin {
-        height: 50px;
-        width: 113px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .signin p:nth-child(2) {
-        font-size: .8rem;
-    }
-
-    /* box 6 */
-    .return {
-        height: 50px;
-        width: 76px;
-    }
-
-    .cart {
-        height: 60px;
-        width: 84px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .cart i {
-        font-size: 30px;
-        text-align: center;
-    }
-
-    /* NAV 2 */
-
-    .nav2 {
-        height: 39px;
-        width: 100%;
-        background-color: #282c3c;
-    }
-
-    .nav2 ul {
-        display: flex;
-    }
-
-    .nav2 ul li {
-        font: 10px;
-        font-family: Arial, Helvetica, sans-serif;
-        color: #ffffff;
-        padding: 9px 1px 7px 18px;
-        justify-content: flex-start;
-        list-style: none;
-    }
-
-    .tripleline {
-        height: 39px;
-        width: 60px;
-        color: #ffffff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 20px;
-    }
-
-    /* section 1 */
-    .background {
-        height: 400px;
-        width: 98%;
-        margin: auto;
-        background-image: url("https://m.media-amazon.com/images/I/71h15GsHkvL._SX3000_.jpg");
-        background-size: cover;
-    }
-
-    .arrow {
-        height: 300px;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .leftarrow {
-        height: 300px;
-        width: 150px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        color: #161717;
-    }
-
-    .rightarrow {
-        height: 300px;
-        width: 150px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        color: #161717;
-    }
-
-    /* nav 3 */
-
-    .nav3 {
-        height: 30px;
-        width: 95%;
-        background-color: #ffffff;
-        text-align: center;
-        padding-top: 10px;
-        margin: auto;
-    }
-
-    /* first-box */
-    .boxes {
-        margin: auto;
-        height: 340px;
-        width: 98%;
-        margin-bottom: 15px;
-
-    }
-
-    .first-box {
-        display: grid;
-        grid-template-columns: .5fr .5fr .5fr .5fr;
-        gap: 10px;
-        width: 100%;
-        box-sizing: border-box;
-        padding: 20px;
-        flex-wrap: wrap;
-    }
-
-    .one {
-        font-family: ' Verdana, sans-serif';
-        background-color: #ffffff;
-        padding: 15px 25px;
-    }
-
-    .one img {
-        height: 285px;
-        width: 317px;
-    }
-
-    .one h2 {
-        padding-bottom: 5px;
-    }
-
-    .one h5 {
-        color: #2162A1;
-    }
-
-    /* second box */
-
-    .second-box {
-        display: grid;
-        grid-template-columns: .5fr 0.5fr .5fr .5fr;
-        gap: 10px;
-        padding: 20px;
-        margin-bottom: 100px;
-        width: 100%;
-        margin-top:50px;
-        box-sizing: border-box;
-        flex-wrap: wrap;
-    }
-
-    .two {
-        font-family: ' Verdana, sans-serif';
-        background-color: #ffffff;
-        margin-top: 15px;
-        padding: 15px 25px;
-    }
-
-    .two img {
-        height: 285px;
-        width: 317px;
-    }
-
-    .two h2 {
-        padding-bottom: 5px;
-    }
-
-    .two h5 {
-        color: #2162A1;
-    }
-
-    .image {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .image img {
-        gap: 20px;
-        margin-bottom: 20px;
-        height: 118px;
-        width: 136px;
-    }
-
-
-    .last5 {
-        height: 188px;
-        width: 100%;
-        background-color: #ffffff;
-        display: flex;
-
-        justify-content: center;
-    }
-
-    .last {
-        height: 180px;
-        width: 500px;
-        bottom: 2px solid red;
-    }
-
-    .last h2 {
-        padding: 50px 50px 25px 50px;
-        text-align: center;
-    }
-
-    .last span {
-        margin-left: 110px;
-        display: inline-block;
-
-    }
-
-    .last span button {
-        height: 30px;
-        width: 243px;
-        border-radius: 25px;
-        background-color: #ffd814;
-    }
-
-    .signin1 {
-
-        text-align: center;
-    }
-
-    .last span p {
-        text-align: center;
-        padding-top: 5px;
-        font-size: 13px;
-    }
-
-    .last-second {
-        height: 50px;
-        width: 100%;
-        background-color: #37475a;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        box-sizing: border-box;
-    }
-
-    .back {
-        color: #ffffff
-    }
-
-    .bottom {
-        background-color: #232f3e;
-        height: 800px;
-        width: 100%;
-    }
-
-    .big {
-        height: 500px;
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        justify-content: space-evenly;
-    }
+
+.navbar {
+    height: 60px;
+    width: 100%;
+    background-color: #181c24;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+/* box 1 */
+.nav-logo {
+    height: 50px;
+    width: 100px;
+}
+
+.logo {
+    height: 100%;
+    width: 100%;
+    background-image: url("https://bulldogdm.com/bulldogdmorg/wp-content/uploads/2021/05/amazon.png");
+    background-size: cover;
+}
+
+.border {
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+.border1 {
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+.border:hover {
+    border: 1.5px solid white;
+}
+
+.border1:hover {
+    border: 1.8px solid orange;
+    border-radius: 6px;
+}
+
+.border2 {
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+.border2:hover {
+    border: 2px solid lightskyblue;
+}
+
+/* box 2 */
+
+.add-first {
+    margin-left: 15px;
+    font-size: .8rem;
+    color: #cccccc;
+}
+
+.add-sec {
+    margin-left: 5px;
+    font-size: 1rem;
+    color: #ffffff;
+}
+
+.nav-icon {
+    display: flex;
+    align-items: center;
+}
+
+/* box 3 */
+
+.nav-search {
+    height: 40px;
+    width: 900px;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.search-select {
+    height: 40px;
+    width: 50px;
+    text-align: center;
+    font-size: 1rem;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+    background-color: #e6e6e6;
+}
+
+.nav-search input {
+    width: 100%;
+    border: none;
+
+}
+
+.click {
+    height: 40px;
+    width: 45px;
+    background-color: #febd69;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    color: #3b3835;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+/* box 4 */
+.country {
+    height: 55px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+}
+
+.flag {
+    height: 16px;
+    width: 21px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/en/archive/a/a4/20151118161037%21Flag_of_the_United_States.svg");
+    background-size: contain;
+}
+
+.lang {
+    height: 15px;
+    width: 18px;
+    text-align: center;
+}
+
+
+/* box 5  */
+
+.signin {
+    height: 50px;
+    width: 113px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.signin p:nth-child(2) {
+    font-size: .8rem;
+}
+
+/* box 6 */
+.return {
+    height: 50px;
+    width: 76px;
+}
+
+.cart {
+    height: 50px;
+    width: 84px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart i {
+    font-size: 30px;
+    text-align: center;
+}
+
+/* NAV 2 */
+
+.nav2 {
+    height: 39px;
+    width: 100%;
+    background-color: #282c3c;
+    display: flex;
+}
+
+
+
+
+.tripleline {
+    height: 39px;
+    width: 60px;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}
+
+.option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    gap: 25px;
+}
+
+.background {
+    background-image: url("https://m.media-amazon.com/images/I/71h15GsHkvL._SX3000_.jpg");
+    height: 350px;
+    width: 98%;
+    background-size: cover;
+    margin: auto;
+    background-repeat: no-repeat;
+}
+
+.arrow {
+    height: 285px;
+    width: 98%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.leftarrow {
+    height: 280px;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightarrow {
+    height: 280px;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav3 {
+    width: 85%;
+    margin: auto;
+    background-color: #ffffff;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* contents  */
+
+.content {
+    height: 750px;
+    width: 100%;
+    background-color: #e3e6e6;
+    display: flex;
+    margin-top: 35px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.box {
+    height: 350px;
+    width: 23%;
+    background-color: #ffffff;
+
+}
+
+.img1 {
+    height: 250px;
+    width: 310px;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2024/Stores-Gaming/FinalGraphics/Fuji_Gaming_store_Dashboard_card_1x_EN._SY304_CB564799420_.jpg");
+    background-size: contain;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.box h2 {
+    margin-left: 20px;
+    margin-top: 5px;
+    text-align: left;
+}
+
+.box h5 {
+    margin-left: 20px;
+    margin-top: 5px;
+    text-align: left;
+    font-weight: 300;
+    color: #2b69a6;
+}
+
+.img6 {
+    height: 250px;
+    width: 310px;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2023/EBF23/Fuji_Desktop_Single_image_EBF_1x_v3._SY304_CB573698005_.jpg");
+    background-size: cover;
+    margin-top: 20px;
+    margin-left: 20px;
+    background-repeat: no-repeat;
+}
+
+.img7 {
+    height: 250px;
+    width: 310px;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_FathersDay_25/Fuji_SingleImageCard_FathersDay25_1x._SY304_CB795634726_.jpg");
+    background-size: contain;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.img2 {
+    height: 250px;
+    width: 310px;
+}
+
+.img3 {
+    height: 250px;
+    width: 310px;
+}
+
+.img4 {
+    height: 250px;
+    width: 310px;
+}
+
+.img5 {
+    height: 250px;
+    width: 310px;
+}
+
+.img8 {
+
+    height: 250px;
+    width: 310px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 20px;
+    margin: auto;
+    margin-top: 10px;
+
+}
+
+.pic8 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2024/BAU2024Sept/CleaningTool_1x._SY116_CB563137408_.jpg");
+    background-size: cover;
+}
+
+.pic5 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2024/BAU2024Sept/HomeStorage_1x._SY116_CB563137408_.jpg");
+    background-size: cover;
+}
+
+.pic6 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2024/BAU2024Sept/HomeDecor_1x._SY116_CB563137408_.jpg");
+    background-size: cover;
+}
+
+.pic7 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2024/BAU2024Sept/Bedding_1x._SY116_CB563137408_.jpg");
+    background-size: cover;
+}
+
+.pic1 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://m.media-amazon.com/images/I/313wAT6Iy2L._SY160_.jpg");
+    background-size: cover;
+    background-position: centre centre;
+
+}
+
+.pic2 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://m.media-amazon.com/images/I/21W7-lndINL._SY75_.jpg" );
+    background-size: cover;
+}
+
+.pic3 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://m.media-amazon.com/images/I/21B-NkA9p-L._SY75_.jpg");
+    background-size: cover;
+}
+
+.pic4{
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://m.media-amazon.com/images/I/217GQ1a2QzL._SY75_.jpg");
+    background-size: cover;
+}
+
+.pic9 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2022/SITE_FLIPS/SPR_22/GW/DQC/DQC_APR_TBYB_W_BOTTOMS_1x._SY116_CB624172947_.jpg");
+    background-size: cover;
+}
+
+.pic10 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2022/SITE_FLIPS/SPR_22/GW/DQC/DQC_APR_TBYB_W_TOPS_1x._SY116_CB623353881_.jpg");
+    background-size: cover;
+}
+
+.pic11 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2022/SITE_FLIPS/SPR_22/GW/DQC/DQC_APR_TBYB_W_DRESSES_1x._SY116_CB623353881_.jpg");
+    background-size: cover;
+}
+
+.pic12 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2022/SITE_FLIPS/SPR_22/GW/DQC/DQC_APR_TBYB_W_SHOES_1x._SY116_CB624172947_.jpg");
+    background-size: cover;
+}
+
+.pic13 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/DiscoTec/2024/HomeLifestyle/HomeSummerFlip/Homepage/QuadCards/Home_Flip_Summer_2024_315_HP_NewArrivals_QuadCard_D_01_1x._SY116_CB555960040_.jpg");
+    background-size: cover;
+}
+
+.pic14 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/DiscoTec/2024/HomeLifestyle/HomeSummerFlip/Homepage/QuadCards/Home_Flip_Summer_2024_317_HP_NewArrivals_QuadCard_D_03_1x._SY116_CB555960040_.jpg");
+    background-size: cover;
+}
+
+.pic15 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/DiscoTec/2024/HomeLifestyle/HomeSummerFlip/Homepage/QuadCards/Home_Flip_Summer_2024_316_HP_NewArrivals_QuadCard_D_02_1x._SY116_CB555960040_.jpg");
+    background-size: cover;
+}
+
+.pic16 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/DiscoTec/2024/HomeLifestyle/HomeSummerFlip/Homepage/QuadCards/Home_Flip_Summer_2024_318_HP_NewArrivals_QuadCard_D_04_1x._SY116_CB555960040_.jpg");
+    background-size: cover;
+}
+
+.pic17 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/launchpad/2023/Gateway/January/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg");
+    background-size: cover;
+}
+
+.pic18 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/launchpad/2023/Gateway/January/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg");
+    background-size: cover;
+}
+
+.pic19 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/launchpad/2023/Gateway/January/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg");
+    background-size: cover;
+}
+
+.pic20 {
+    height: 1fr;
+    width: 1fr;
+    background-image: url("https://images-na.ssl-images-amazon.com/images/G/01/launchpad/2023/Gateway/January/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg");
+    background-size: cover;
+}
