--- a/style.css
+++ b/style.css
@@ -515,7 +515,7 @@ footer {
     height: 200px;
     width: 100%;
     background-color: #ffffff;
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -535,12 +535,72 @@ footer {
     font-weight: bold;
 }
 
-.button{
-    height:50px;
+.button {
+    height: 50px;
 }
-.button button{
+
+.button button {
     height: 40px;
-    width:20%;
+    width: 20%;
     border-radius: 50px;
     background-color: #ffd814;
+}
+
+/*footpanel2 */
+
+.foot-panel-2 {
+    height: 400px;
+    width: 100%;
+    background-color: #232f3e;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul {
+    margin-top: 40px;
+}
+
+ul a {
+    margin-top: 10px;
+    display: block;
+    font-size: 0.8rem;
+    color: #dddddd;
+}
+
+.foot-panel-3 {
+    height: 95px;
+    width: 100%;
+    background-color: #232f3e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: .5px solid lightgray;
+}
+
+.bottom-logo {
+    height: 50px;
+    width: 100px;
+    background-image: url("https://bulldogdm.com/bulldogdmorg/wp-content/uploads/2021/05/amazon.png");
+    background-size: cover;
+}
+
+.footer-last{
+    height: 80px;
+    width: 100%;
+    text-align: center;
+    background-color: #181c24;
+    color:#ffffff;
+    font-size: .7rem;
+}
+.pages{
+    padding-top: 25px; 
+    
+}
+.pages a{
+    margin-left: 15px;
+}
+
+.copyright{
+    padding-top: 10px;
 }
