--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 .border1:hover {
     border: 1.8px solid orange;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .border2 {
@@ -59,6 +60,7 @@ body {
 .border2:hover {
     border: 2px solid lightskyblue;
     background-color: white;
+    opacity: .4;
 }
 
 /* box 2 */
